components/style.css
@import url('https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Castoro+Titling&display=swap');
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
@import url(cards.css);
@import url(stars.css);

h2 {
  color: aliceblue;
}


.image_circle {
  border-radius: 50%;
  width: 400px;
  box-shadow:  0 10px 30px rgba(0,0,0,.5);
}

.hidden {
  visibility: collapse;
}

h1 {
  font-size: 100px;
  padding: 30px;
  margin: 0 auto;
  border-radius: 8px;
  text-shadow: 0 10px 30px rgba(7, 7, 7, 0.1);
  font-family: 'Bruno Ace', cursive;
}

a {
  color: black;
}

.header {
  text-align: center;
  margin-top: 20px;
  margin: 20px 5%;
  justify-content: center;
  color: black;
}

.header h1 {
  font-size: 80px;
  text-shadow: 0 10px 30px rgba(1, 1, 1, 0.1);
  font-family: 'Bruno Ace', cursive;
}

.cardheader {
  text-align: center;
  margin-top: 20px;
  margin: 20px 5%;
  justify-content: center;
  color: black;
}

#carouselExampleAutoplaying {
  overflow: auto;
}

.end {
  margin-top: 30px;
}

.end ul {
  list-style-type: none;
  list-style-position: inside;
  padding: 0;
}

li a {
  background-color: #F8F5E4;
  color: #3F497F;
  width: 50px;
  font-size: 60px;
  padding-left: 0px;
}
.inlineList {
  display: inline-block;
  padding: 0px;
}

.sou-img {
  background-image: url("images/sou.png");
  width: 350px;
  justify-content: center;
  object-fit: contain;
  background-repeat: no-repeat;
}

.psu-img {
  background-image: url("images/psu.png");
  justify-content: center;
  width: 350px;
  object-fit: contain;
  background-repeat: no-repeat;
}

.tiu-img {
  background-image: url("images/tiu.png");
  background-repeat: no-repeat;
  justify-content: center;
  width: 350px;
  object-fit: contain;
}

.paragraph {
  max-width: 450x;
  color: aliceblue;
}

.header {
  color: aliceblue;
}

.presentations {
  margin-top: 20px;
  position: relative;
}

.carousel-control-prev {
  position: relative;
  display: inline;
}

.col-md-4 {
  min-height: 50px;
}

@media (max-width: 960px) {
  /* For a screen < 960px, this CSS will be read */
  body {
    width: 700px;
  }
}
@media (max-width: 720px) {
  /* For a screen < 720px, this CSS will be read */
  body {
    width: 500px;
  }
}
@media (max-width: 540px) {
  /* For a screen < 540px, this CSS will be read */
  body {
    width: 300px;
  }
}

